--- a/Template_analysis.ipynb
+++ b/Template_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,21 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'type' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Michael_Weide\\Documents\\Master\\Materialphysics_lab_course\\Template_analysis.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mleast_squares_fit\u001b[39m(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=1'>2</a>\u001b[0m     fit_function: Callable[\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=2'>3</a>\u001b[0m         [Union[Sequence[\u001b[39mfloat\u001b[39m], \u001b[39mfloat\u001b[39m], VarArg(\u001b[39mfloat\u001b[39m)], Union[Sequence[\u001b[39mfloat\u001b[39m], \u001b[39mfloat\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=3'>4</a>\u001b[0m     ],\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=4'>5</a>\u001b[0m     x_values: Sequence[\u001b[39mfloat\u001b[39m],\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=5'>6</a>\u001b[0m     y_values: Sequence[\u001b[39mfloat\u001b[39m],\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=6'>7</a>\u001b[0m     y_err: Union[Sequence[\u001b[39mfloat\u001b[39m], \u001b[39mfloat\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=7'>8</a>\u001b[0m     initial_guesses: Sequence[\u001b[39mfloat\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=8'>9</a>\u001b[0m     bounds: Tuple[\u001b[39mfloat\u001b[39m, \u001b[39mfloat\u001b[39m] \u001b[39m=\u001b[39m (\u001b[39m-\u001b[39m\u001b[39mfloat\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39minf\u001b[39m\u001b[39m\"\u001b[39m), \u001b[39mfloat\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39minf\u001b[39m\u001b[39m\"\u001b[39m)),\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=9'>10</a>\u001b[0m     maxfev: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39m800\u001b[39m,\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=10'>11</a>\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tuple[Type[np\u001b[39m.\u001b[39;49mndarray[\u001b[39mfloat\u001b[39;49m]], Type[np\u001b[39m.\u001b[39mndarray[\u001b[39mfloat\u001b[39m]]]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=11'>12</a>\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=12'>13</a>\u001b[0m \u001b[39m    Calculate the fit function to data with error bars in y direction using non-linear\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=13'>14</a>\u001b[0m \u001b[39m    least squares.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=63'>64</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=64'>65</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Michael_Weide/Documents/Master/Materialphysics_lab_course/Template_analysis.ipynb#ch0000005?line=65'>66</a>\u001b[0m     \u001b[39m# Calculate the fit paremeters.\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'type' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def least_squares_fit(\n",
     "    fit_function: Callable[\n",
@@ -160,7 +148,7 @@
     "    initial_guesses: Sequence[float] = None,\n",
     "    bounds: Tuple[float, float] = (-float(\"inf\"), float(\"inf\")),\n",
     "    maxfev: int = 800,\n",
-    ") -> Tuple[Type[np.ndarray[float]], Type[np.ndarray[float]]]:\n",
+    ") -> Tuple[Sequence[float], Sequence[float]]:\n",
     "    \"\"\"\n",
     "    Calculate the fit function to data with error bars in y direction using non-linear\n",
     "    least squares.\n",
@@ -238,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
