--- a/Template_analysis.ipynb
+++ b/Template_analysis.ipynb
@@ -233,7 +233,7 @@
     "def error_prop_latexify(func: str, variables: Iterable[str]) -> None:\n",
     "    \"\"\"\n",
     "    Calculate the error of a function according to gaussian error propagation and print\n",
-    "    its LaTeX expression as well as the input function.\n",
+    "    its LaTeX expression as well as the passed function.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -274,7 +274,7 @@
     "    # Raise an error, if either of the parameters has the wrong format.\n",
     "    if not isinstance(func, str):\n",
     "        raise TypeError(\n",
-    "            f\"Not a valid format for func: {type(func)!r}. \" + \"Format must be str.\"\n",
+    "            f\"Not a valid format for func: {type(func)!r}. Format must be str.\"\n",
     "        )\n",
     "\n",
     "    if (\n",
@@ -688,7 +688,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_the_legend(\n",
+    "def show_the_legend_with_ordered_labels(\n",
     "    label_order: Optional[Sequence[int]] = None,\n",
     "    framealpha_legend: Optional[float] = 1,\n",
     "    loc: Optional[Union[str, Tuple[float, float]]] = \"best\",\n",
@@ -827,8 +827,8 @@
     "    Create labels for variables with their respective values and erros that are to be\n",
     "    shown in the legend of the plot.\n",
     "\n",
-    "    If None is passed to the value and its error and an empty string to the units, the\n",
-    "    label entirely consists of the text that is passed to the variable name.\n",
+    "    If None is passed to the value and its error and the units, the label entirely\n",
+    "    consists of the text that is passed to the variable name.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
