Renaming and typos

--- a/Template_analysis.ipynb
+++ b/Template_analysis.ipynb
@@ -9,16 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lab_black extension is already loaded. To reload it, use:\n",
+      "  %reload_ext lab_black\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext lab_black"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,11 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fig_params(\n",
+    "def update_custom_rcparams(\n",
     "    designated_use: Optional[str] = \"article\", fontsize: Optional[float] = None\n",
     ") -> None:\n",
     "    \"\"\"\n",
@@ -396,11 +405,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fig_dimensions_latexify(\n",
+    "def calculate_fig_dimensions(\n",
     "    article_type: Optional[str] = \"one_column\",\n",
     "    fig_width_pt: Optional[float] = None,\n",
     "    fig_height_pt: Optional[float] = None,\n",
@@ -434,7 +443,7 @@
     "    ratio : float, optional\n",
     "        Ratio of the plot. Takes values between 0 and 1. Default is 1.\n",
     "\n",
-    "    subplots : tuple(float, float), optional\n",
+    "    subplots : Tuple[float, float], optional\n",
     "        Number of subplots that are to be plotted per line and column. They are also\n",
     "        used to adjust the sizes of the subplots within the figure accordingly.\\n\n",
     "        Default is (1, 1).\n",
@@ -448,14 +457,14 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    fig_dimensions : tuple(float, float)\n",
+    "    fig_dimensions : Tuple[float, float]\n",
     "        Tuple with the width and height of the figure/subplots in inches.\n",
     "\n",
     "    Examples\n",
     "    --------\n",
-    "    >>> fig_dimensions_latexify()\n",
+    "    >>> calculate_fig_dimensions()\n",
     "    (5.0, 3.0901699437494745)\n",
-    "    >>> plt.subplots(1, 1, figsize=fig_dimensions_latexify())\n",
+    "    >>> plt.subplots(1, 1, figsize=calculate_fig_dimensions())\n",
     "    (<Figure size 700x432.624 with 1 Axes>, <AxesSubplot:>)\n",
     "\n",
     "    \"\"\"\n",
@@ -500,14 +509,14 @@
     "\n",
     "    # Rc parameters are updated so that the figures blend in nicely in the document. If\n",
     "    # a different fontsize is required, desiganted_use or fontsize can be adjusted.\n",
-    "    fig_params(designated_use=designated_use, fontsize=fontsize)\n",
+    "    update_custom_rcparams(designated_use=designated_use, fontsize=fontsize)\n",
     "\n",
     "    return (fig_width_in, fig_height_in)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +629,7 @@
     "        Default is (0, 0).\n",
     "\n",
     "    **kwargs : optional\n",
-    "        Parameters of the function fig_dimensions_latexify().\n",
+    "        Parameters of the function calculate_fig_dimensions().\n",
     "        For more information see the documentation of said function.\n",
     "\n",
     "    Example\n",
@@ -640,7 +649,7 @@
     "\n",
     "    \"\"\"\n",
     "    # Set up the figsize and make the plots more appealing in LaTeX.\n",
-    "    fig, ax = plt.subplots(1, 1, figsize=fig_dimensions_latexify(**kwargs))\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=calculate_fig_dimensions(**kwargs))\n",
     "\n",
     "    # Plot the data with the desired settings.\n",
     "    plt.errorbar(\n",
@@ -684,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,6 +701,7 @@
     "    label_order: Optional[Sequence[int]] = None,\n",
     "    framealpha_legend: Optional[float] = 1,\n",
     "    loc: Optional[Union[str, Tuple[float, float]]] = \"best\",\n",
+    "    legend_fontsize: Optional[Union[int, float]] = None\n",
     ") -> None:\n",
     "    \"\"\"\n",
     "    Show the labels of the plot in the desired order.\n",
@@ -710,6 +720,10 @@
     "        Location of the legend. Can also be be a 2-tuple giving the coordinates of the\n",
     "        lower-left corner of the legend in axes coordinates. Default is \"best\".\n",
     "\n",
+    "    legend_fontsize : float, optional\n",
+    "        Fontsize of the text shown in the legend. If None is passed, the fontsize is\n",
+    "        read out from the rc parameters and set to that value. Default is None.\n",
+    "\n",
     "    Example\n",
     "    -------\n",
     "    >>> fig, ax = plt.subplots(1, 1, figsize=(5, 3))\n",
@@ -719,6 +733,9 @@
     "    >>> plt.show()\n",
     "\n",
     "    \"\"\"\n",
+    "    if legend_fontsize is None:\n",
+    "        legend_fontsize = plt.rcParams.get(\"legend.fontsize\")\n",
+    "\n",
     "    if label_order is not None:\n",
     "        handles, labels = plt.gca().get_legend_handles_labels()\n",
     "        labels, handles = zip(*sorted(zip(labels, handles), key=lambda t: t[0]))\n",
@@ -727,14 +744,15 @@
     "            [labels[idx] for idx in label_order],\n",
     "            framealpha=framealpha_legend,\n",
     "            loc=loc,\n",
+    "            fontsize=legend_fontsize\n",
     "        )\n",
     "    else:\n",
-    "        plt.legend(framealpha=framealpha_legend, loc=loc)"
+    "        plt.legend(framealpha=framealpha_legend, loc=loc, fontsize=legend_fontsize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
