Docstring change in update_custom_rcparams()

--- a/Template_analysis.ipynb
+++ b/Template_analysis.ipynb
@@ -362,7 +362,8 @@
     "        Can be either 'article' or 'powerpoint'. Default is 'article'.\n",
     "\n",
     "    fontsize : float, optional\n",
-    "        Fontsize of the labels, legend, x- and y-ticklabels and title. Default is None.\n",
+    "        Fontsize of the labels, legend, x- and y-ticklabels and title. Set this e.g. to\n",
+    "        the fontsize of your LaTeX document. Default is None.\n",
     "\n",
     "    \"\"\"\n",
     "    # If fontsize or designated_use have an invalid value, an error is raised.\n",
