Renaming variables in data_plot()

--- a/Template_analysis.ipynb
+++ b/Template_analysis.ipynb
@@ -416,14 +416,11 @@
     "    fig_height_pt: Optional[float] = None,\n",
     "    ratio: Optional[float] = 1,\n",
     "    subplots: Optional[Tuple[float, float]] = (1, 1),\n",
-    "    designated_use: Optional[str] = \"article\",\n",
-    "    fontsize: Optional[float] = None,\n",
+    "    **kwargs\n",
     ") -> Tuple[float, float]:\n",
     "    \"\"\"\n",
-    "    Calculate the figure dimensions so that the figure has text width in the article.\n",
-    "\n",
-    "    Additionally, the rc parameters are updated so that the figures blend in nicely in\n",
-    "    the document.\n",
+    "    Calculate the figure dimensions so that the figure has text width in the article and\n",
+    "    the right font and fontsize.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -449,12 +446,9 @@
     "        used to adjust the sizes of the subplots within the figure accordingly.\\n\n",
     "        Default is (1, 1).\n",
     "\n",
-    "    designated_use : str, optional\n",
-    "        Designated use of the figure to adjust the fontsize to common default values.\n",
-    "        Can be either 'article' or 'powerpoint'. Default is 'article'.\n",
-    "\n",
-    "    fontsize : float, optional\n",
-    "        Fontsize of the labels, legend, x- and y-ticklabels and title. Default is None.\n",
+    "    **kwargs : optional\n",
+    "        Parameters of the function update_custom_rcparams().\n",
+    "        For more information see the documentation of said function.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -510,7 +504,7 @@
     "\n",
     "    # Rc parameters are updated so that the figures blend in nicely in the document. If\n",
     "    # a different fontsize is required, desiganted_use or fontsize can be adjusted.\n",
-    "    update_custom_rcparams(designated_use=designated_use, fontsize=fontsize)\n",
+    "    update_custom_rcparams(**kwargs)\n",
     "\n",
     "    return (fig_width_in, fig_height_in)"
    ]
@@ -528,14 +522,14 @@
     "    ylabel: str,\n",
     "    x_err: Optional[Union[Sequence[float], float]] = None,\n",
     "    y_err: Optional[Union[Sequence[float], float]] = None,\n",
-    "    marker_data: Optional[str] = \".\",\n",
-    "    ls_data: Optional[str] = None,\n",
-    "    marker_color: Optional[str] = \"C0\",\n",
-    "    markersize_data: Optional[float] = 6,\n",
+    "    marker: Optional[str] = \".\",\n",
+    "    ls: Optional[str] = None,\n",
+    "    color: Optional[str] = \"C0\",\n",
+    "    markersize: Optional[float] = 6,\n",
     "    error_line_width: Optional[float] = 1.3,\n",
     "    capsize_error_bar: Optional[float] = 5,\n",
-    "    label_data: Optional[str] = None,\n",
-    "    zorder_data: Optional[float] = 0,\n",
+    "    label: Optional[str] = None,\n",
+    "    zorder: Optional[float] = 0,\n",
     "    grid_linewidth: Optional[float] = 0,\n",
     "    xlim: Optional[Tuple[float, float]] = None,\n",
     "    ylim: Optional[Tuple[float, float]] = None,\n",
@@ -571,10 +565,10 @@
     "        Errors of the y values. Must have the same dimensions as y_values or be float,\n",
     "        if they are the same for all values. Default is None.\n",
     "\n",
-    "    marker_data : str, optional\n",
+    "    marker : str, optional\n",
     "        How the data points should be drawn in the plot. Default is \".\".\n",
     "\n",
-    "    marker_color : str, optional\n",
+    "    color : str, optional\n",
     "        Color of the data points and error bars. Default is \"C0\".\n",
     "\n",
     "        For further colors visit:\n",
@@ -583,10 +577,10 @@
     "        \n",
     "        https://matplotlib.org/stable/gallery/color/named_colors.html\n",
     "\n",
-    "    markersize_data : float, optional\n",
+    "    markersize : float, optional\n",
     "        Size of the data points. Default is 6.\n",
     "\n",
-    "    ls_data : str, optinal\n",
+    "    ls : str, optinal\n",
     "        Linestyle of the data. Default is None.\n",
     "\n",
     "    error_line_width : float, optional\n",
@@ -596,10 +590,10 @@
     "    capsize_error_bar : float, optional\n",
     "        Size of the bars perpendicular to the errorbars. Default is 5.\n",
     "\n",
-    "    label_data : str, optional\n",
+    "    label : str, optional\n",
     "        Label of the data that is to be shown in the legend. Default is None.\n",
     "\n",
-    "    zorder_data : float, optional\n",
+    "    zorder : float, optional\n",
     "        Value that indicates in which order the contents of the plot are to be drawn.\n",
     "        The lowest value is drawn first. Default is 0.\n",
     "\n",
@@ -643,7 +637,7 @@
     "    >>>     \"y-values\",\n",
     "    >>>     y_err=1,\n",
     "    >>>     x_err=np.random.random_sample(21) * 0.1,\n",
-    "    >>>     ls_data=\"dashdot\",\n",
+    "    >>>     ls=\"dashdot\",\n",
     "    >>>     xticks=np.arange(0, 2.1, 0.25),\n",
     "    >>>     grid_linewidth=0.1,\n",
     "    >>> )\n",
@@ -658,14 +652,14 @@
     "        y_values,\n",
     "        xerr=x_err,\n",
     "        yerr=y_err,\n",
-    "        color=marker_color,\n",
-    "        fmt=marker_data,\n",
-    "        ls=ls_data,\n",
+    "        color=color,\n",
+    "        fmt=marker,\n",
+    "        ls=ls,\n",
     "        elinewidth=error_line_width,\n",
     "        capsize=capsize_error_bar,\n",
-    "        markersize=markersize_data,\n",
-    "        zorder=zorder_data,\n",
-    "        label=label_data,\n",
+    "        markersize=markersize,\n",
+    "        zorder=zorder,\n",
+    "        label=label,\n",
     "    )\n",
     "\n",
     "    # Set the labels of both axis.\n",
