Additonal features and mean error functions

--- a/Template_analysis.ipynb
+++ b/Template_analysis.ipynb
@@ -9,28 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The lab_black extension is already loaded. To reload it, use:\n",
-      "  %reload_ext lab_black\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load_ext lab_black"
+    "# Black formater in Jupyter Notebook.\n",
+    "%load_ext lab_black\n",
+    "\n",
+    "# Matplotlib graphs will be included in notebook, next to the code.\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Renders figures as svgs instead of pngs so that they can be saved as pdf or svg via\n",
+    "# the icon in the top right corner of the ouput cell and have higher resolution in the\n",
+    "# Notebook. Note that the figures will be displayed smaller in the output cell as the\n",
+    "# figure dpi does no longer scale the figure since its now a vector graphic.\n",
+    "# %config InlineBackend.figure_format = 'svg'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import locale\n",
     "import os\n",
     "import pytexit\n",
     "import numpy as np\n",
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
     "    x_err: Union[Sequence[float], float],\n",
     "    y_err: Union[Sequence[float], float],\n",
     "    initial_guesses: Sequence[float],\n",
-    ") -> Type[odr.odrpack.Output]:\n",
+    ") -> Type[odr.Output]:\n",
     "    \"\"\"\n",
     "    Calculate the fit function to data with error bars in both x and y direction using \n",
     "    orthogonal distance regression. \n",
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,6 +389,7 @@
     "    # Dictionary containing the rc parameters that are to be updated.\n",
     "    params = {\n",
     "        \"axes.edgecolor\": \"#595959\",\n",
+    "        \"axes.formatter.use_locale\": True,\n",
     "        \"axes.labelsize\": fontsize,\n",
     "        \"axes.titlesize\": fontsize,\n",
     "        \"backend\": \"ps\",\n",
@@ -396,7 +399,18 @@
     "        \"font.size\": fontsize,\n",
     "        \"legend.fontsize\": fontsize,\n",
     "        \"pgf.texsystem\": \"pdflatex\",\n",
-    "        \"text.latex.preamble\": r\"\\usepackage{siunitx}\",\n",
+    "        \"savefig.dpi\": 300,\n",
+    "        \"text.latex.preamble\": \"\\n\".join(\n",
+    "            [\n",
+    "                r\"\\usepackage[utf8]{inputenc}\",\n",
+    "                r\"\\usepackage[T1]{fontenc}\",\n",
+    "                r\"\\usepackage{textcomp}\",\n",
+    "                r\"\\usepackage{amsmath}\",\n",
+    "                r\"\\usepackage{amssymb}\",\n",
+    "                r\"\\usepackage{siunitx}\",\n",
+    "                r\"\\usepackage{icomma}\",\n",
+    "            ]\n",
+    "        ),\n",
     "        \"text.usetex\": True,\n",
     "        \"xtick.labelsize\": fontsize,\n",
     "        \"ytick.labelsize\": fontsize,\n",
@@ -406,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +430,7 @@
     "    fig_height_pt: Optional[float] = None,\n",
     "    ratio: Optional[float] = 1,\n",
     "    subplots: Optional[Tuple[float, float]] = (1, 1),\n",
-    "    **kwargs\n",
+    "    **kwargs,\n",
     ") -> Tuple[float, float]:\n",
     "    \"\"\"\n",
     "    Calculate the figure dimensions so that the figure has text width in the article and\n",
@@ -511,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +538,7 @@
     "    y_err: Optional[Union[Sequence[float], float]] = None,\n",
     "    marker: Optional[str] = \".\",\n",
     "    ls: Optional[str] = None,\n",
-    "    color: Optional[str] = \"C0\",\n",
+    "    color: Optional[str] = None,\n",
     "    markersize: Optional[float] = 6,\n",
     "    error_line_width: Optional[float] = 1.3,\n",
     "    capsize_error_bar: Optional[float] = 5,\n",
@@ -537,6 +551,7 @@
     "    yticks: Optional[Sequence[float]] = None,\n",
     "    scientific_axis: Optional[str] = \"both\",\n",
     "    scilimits: Optional[Tuple[int, int]] = (0, 0),\n",
+    "    comma_separation: Optional[bool] = False,\n",
     "    **kwargs\n",
     ") -> None:\n",
     "    \"\"\"\n",
@@ -569,7 +584,7 @@
     "        How the data points should be drawn in the plot. Default is \".\".\n",
     "\n",
     "    color : str, optional\n",
-    "        Color of the data points and error bars. Default is \"C0\".\n",
+    "        Color of the data points and error bars. Default is None.\n",
     "\n",
     "        For further colors visit:\n",
     "\n",
@@ -623,6 +638,10 @@
     "\n",
     "        Default is (0, 0).\n",
     "\n",
+    "    comma_separation : boolean, optional\n",
+    "        If True, the decimal delimiter is comma instead of dot without an extra space\n",
+    "        after the comma. Default is False.\n",
+    "\n",
     "    **kwargs : optional\n",
     "        Parameters of the function calculate_fig_dimensions().\n",
     "        For more information see the documentation of said function.\n",
@@ -646,6 +665,11 @@
     "    # Set up the figsize and make the plots more appealing in LaTeX.\n",
     "    fig, ax = plt.subplots(1, 1, figsize=calculate_fig_dimensions(**kwargs))\n",
     "\n",
+    "    if comma_separation:\n",
+    "        locale.setlocale(locale.LC_NUMERIC, \"de_DE\")\n",
+    "    else:\n",
+    "        locale.setlocale(locale.LC_NUMERIC, \"en_US\")\n",
+    "\n",
     "    # Plot the data with the desired settings.\n",
     "    plt.errorbar(\n",
     "        x_values,\n",
@@ -653,7 +677,7 @@
     "        xerr=x_err,\n",
     "        yerr=y_err,\n",
     "        color=color,\n",
-    "        fmt=marker,\n",
+    "        marker=marker,\n",
     "        ls=ls,\n",
     "        elinewidth=error_line_width,\n",
     "        capsize=capsize_error_bar,\n",
@@ -688,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +720,8 @@
     "    label_order: Optional[Sequence[int]] = None,\n",
     "    framealpha_legend: Optional[float] = 1,\n",
     "    loc: Optional[Union[str, Tuple[float, float]]] = \"best\",\n",
-    "    legend_fontsize: Optional[Union[int, float]] = None\n",
+    "    legend_fontsize: Optional[Union[int, float]] = None,\n",
+    "    legend_line_width: Optional[Union[int, float]] = 2,\n",
     ") -> None:\n",
     "    \"\"\"\n",
     "    Show the labels of the plot in the desired order.\n",
@@ -715,9 +740,13 @@
     "        Location of the legend. Can also be be a 2-tuple giving the coordinates of the\n",
     "        lower-left corner of the legend in axes coordinates. Default is \"best\".\n",
     "\n",
-    "    legend_fontsize : float, optional\n",
+    "    legend_fontsize : float or int, optional\n",
     "        Fontsize of the text shown in the legend. If None is passed, the fontsize is\n",
     "        read out from the rc parameters and set to that value. Default is None.\n",
+    "\n",
+    "    legend_line_width : flaot or int, optional\n",
+    "        Width of the lines that are shown next to the labels in the legend. this is\n",
+    "        independent of the width displayed in the graphs. Default is 2.\n",
     "\n",
     "    Example\n",
     "    -------\n",
@@ -734,20 +763,26 @@
     "    if label_order is not None:\n",
     "        handles, labels = plt.gca().get_legend_handles_labels()\n",
     "        labels, handles = zip(*sorted(zip(labels, handles), key=lambda t: t[0]))\n",
-    "        plt.legend(\n",
+    "        legend = plt.legend(\n",
     "            [handles[idx] for idx in label_order],\n",
     "            [labels[idx] for idx in label_order],\n",
     "            framealpha=framealpha_legend,\n",
     "            loc=loc,\n",
-    "            fontsize=legend_fontsize\n",
+    "            fontsize=legend_fontsize,\n",
     "        )\n",
     "    else:\n",
-    "        plt.legend(framealpha=framealpha_legend, loc=loc, fontsize=legend_fontsize)"
+    "        legend = plt.legend(\n",
+    "            framealpha=framealpha_legend, loc=loc, fontsize=legend_fontsize\n",
+    "        )\n",
+    "\n",
+    "    # Change the linewidth of the lines that are shown next to the labels in the legend.\n",
+    "    legend_lines = legend.get_lines()\n",
+    "    plt.setp(legend_lines, linewidth=legend_line_width)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,12 +854,12 @@
     "    if not os.path.isdir(dir_path):\n",
     "        os.mkdir(dir_path)\n",
     "\n",
-    "    plt.savefig(f\"{file_path}.{ftype}\", dpi=300, bbox_inches=\"tight\")"
+    "    plt.savefig(f\"{file_path}.{ftype}\", bbox_inches=\"tight\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +915,7 @@
     "    >>> add_label_to_legend(r\"$\\beta$\", 3.45, 0.12, 2, 0, None)\n",
     "    >>> add_label_to_legend(r\"$\\gamma$\", 3, 1, 1, -1, None)\n",
     "    >>> add_label_to_legend(r\"$\\varphi$\", 3.2, None, 0, -1, r\"Hz\")\n",
-    "    >>> add_label_to_legend(r\"This is just plane text\", None, None, 0, 0, None)\n",
+    "    >>> add_label_to_legend(r\"This is just plane text\")\n",
     "    >>> plt.legend(framealpha=1)\n",
     "    >>> plt.show()\n",
     "\n",
@@ -1008,6 +1043,146 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean_error(values: Sequence[Union[float, int]]) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the statistical uncertainty of a mean value according to the \"Guide to the\n",
+    "    Expression of Uncertainty in Measurement\" (GUM).\n",
+    "\n",
+    "    It is assumed that the values are normally distributed and that the interval -t to\n",
+    "    +t encompasses 68.27% of the distribution.\n",
+    "\n",
+    "    Therefore, the degree of freedom is determined by n - 1, where n is the number of\n",
+    "    independent observations.\n",
+    "\n",
+    "    For further informations visit:\n",
+    "    https://www.bipm.org/en/committees/jc/jcgm/publications\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    values : array_like of rank-1\n",
+    "        Values from which the mean value and its statistical uncertainty are to be\n",
+    "        determined. Must be an iterable of at least two values.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "        mean_error : float\n",
+    "            Statistical uncertainty of the mean according to the t-distribution.\n",
+    "\n",
+    "    Example\n",
+    "    -------\n",
+    "    >>> mean_error(np.arange(10))\n",
+    "    1.0148727342217185\n",
+    "    \"\"\"\n",
+    "    # Calculate the number of independent observations. Raise an error if its not valid.\n",
+    "    n = len(values)\n",
+    "\n",
+    "    if n <= 1:\n",
+    "        raise ValueError(\n",
+    "            f\"Not a valid length of values: {len(values)!r}. \"\n",
+    "            + \"Must contain at least two values.\"\n",
+    "        )\n",
+    "\n",
+    "    # Calculate the degrees of freedom.\n",
+    "    degrees_of_freedom = n - 1\n",
+    "\n",
+    "    # Determine the t-value from the degrees of freedom.\n",
+    "    if degrees_of_freedom <= 9:\n",
+    "        t = np.array([1.84, 1.32, 1.20, 1.14, 1.11, 1.09, 1.08, 1.07, 1.06])[\n",
+    "            degrees_of_freedom - 1\n",
+    "        ]\n",
+    "\n",
+    "    elif 10 <= degrees_of_freedom <= 11:\n",
+    "        t = 1.05\n",
+    "\n",
+    "    elif 12 <= degrees_of_freedom <= 14:\n",
+    "        t = 1.04\n",
+    "\n",
+    "    elif 15 <= degrees_of_freedom <= 24:\n",
+    "        t = 1.03\n",
+    "\n",
+    "    elif 25 <= degrees_of_freedom <= 34:\n",
+    "        t = 1.02\n",
+    "\n",
+    "    elif 35 <= degrees_of_freedom <= 99:\n",
+    "        t = 1.01\n",
+    "\n",
+    "    elif 100 <= degrees_of_freedom <= 999:\n",
+    "        t = 1.005\n",
+    "\n",
+    "    else:\n",
+    "        t = 1.0\n",
+    "\n",
+    "    # Calculate the mean value.\n",
+    "    mean = np.mean(values)\n",
+    "\n",
+    "    return t * np.sqrt(np.sum((values - mean) ** 2) / (n * (n - 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combined_mean_error(values, errors) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the combined error of a mean value from its statistical uncertainty and\n",
+    "    the mean of the individual errors.\n",
+    "\n",
+    "    All individual errors are weighted the same.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    values : array_like of rank-1\n",
+    "        Values from which the mean value and its statistical uncertainty are to be\n",
+    "        determined. Must be an iterable of at least two values.\n",
+    "\n",
+    "    errors : array_like of rank-1 or float\n",
+    "        Errors from the values. Must have the same length as values or be a float or\n",
+    "        int, if the error is the same for all values.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "        combined_error : float\n",
+    "            Combined uncertainty of the mean value.\n",
+    "\n",
+    "    Example\n",
+    "    -------\n",
+    "    >>> combined_mean_error([1, 2, 3, 4, 5], [1, 1.2, 0.7, 1, 2])\n",
+    "    0.8399380929568561\n",
+    "    \"\"\"\n",
+    "    if (not isinstance(errors, float) or not isinstance(errors, int)) and (\n",
+    "        not isinstance(errors, float)\n",
+    "        and not isinstance(errors, int)\n",
+    "        and len(values) != len(errors)\n",
+    "    ):\n",
+    "        raise TypeError(\n",
+    "            f\"Not a valid format of errors: {type(errors)!r}. \"\n",
+    "            + \"Format must either be float or int or be a sequence with float or \"\n",
+    "            + \"int that has the same length as values.\"\n",
+    "        )\n",
+    "\n",
+    "    # Calculate the number of independent observations. Raise an error if its not valid.\n",
+    "    n = len(values)\n",
+    "\n",
+    "    if n <= 1:\n",
+    "        raise ValueError(\n",
+    "            f\"Not a valid length of values: {len(values)!r}. \"\n",
+    "            + \"Must contain at least two values.\"\n",
+    "        )\n",
+    "\n",
+    "    # Calculate the mean value.\n",
+    "    mean = np.mean(values)\n",
+    "\n",
+    "    return np.sqrt((1 / n * np.mean(errors)) ** 2 + mean_error(values) ** 2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1038,7 +1213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
