--- a/JupyterNotebook/Template_analysis.ipynb
+++ b/JupyterNotebook/Template_analysis.ipynb
@@ -710,7 +710,7 @@
     "    scilimits: Optional[Tuple[int, int]] = (0, 0),\n",
     "    comma_separation: Optional[bool] = False,\n",
     "    **kwargs,\n",
-    ") -> Tuple[mpl.figure.Figure, mpl.axes._subplots.AxesSubplot]:\n",
+    ") -> Tuple[mpl.figure.Figure, mpl.axes._subplots.Axes]:\n",
     "    \"\"\"\n",
     "    Plot the data with error bars, if necessary. The purpose of this function is to set\n",
     "    customized default values and plot dimensions that are often used.\n",
@@ -805,7 +805,7 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    Tuple[matplotlib.figure.Figure, matplotlib.axes._subplots.AxesSubplot]\n",
+    "    Tuple[matplotlib.figure.Figure, matplotlib.axes._subplots.Axes]\n",
     "        Figure and AxesSubplot class that can be used for further settings.\n",
     "\n",
     "    Example\n",
