Updated docstring for calculate_fig_dimensions()

--- a/JupyterNotebook/Template_analysis.ipynb
+++ b/JupyterNotebook/Template_analysis.ipynb
@@ -589,7 +589,7 @@
     "    subplots: Optional[Tuple[float, float]] = (1, 1),\n",
     "    **kwargs,\n",
     ") -> Tuple[float, float]:\n",
-    "    \"\"\"\n",
+    "    r\"\"\"\n",
     "    Calculate the figure dimensions so that the figure has text width in the article and\n",
     "    the right font and font size.\n",
     "\n",
@@ -600,13 +600,13 @@
     "        246 pt, respectively. Default is 'one_column'.\n",
     "\n",
     "    fig_width_pt : float, optional\n",
-    "        Figure width in pts. Use \\showthe\\\\textwidth or \\showthe\\columnwidth for a one\n",
-    "        or two column article in LaTeX to insert the figures with the correct size.\\n\n",
+    "        Figure width in pts. Use \\showthe\\textwidth or \\showthe\\columnwidth for a one\n",
+    "        or two column article in LaTeX to insert the figures with the correct size.\n",
     "        Default is None.\n",
     "\n",
     "    fig_height_pt : float, optional\n",
     "        Figure height in pts. If no value is passed, the height is calculated from the\n",
-    "        width by multiplying it with the golden ratio to obatin an asthetic ratio.\\n\n",
+    "        width by multiplying it with the golden ratio to obatin an asthetic ratio.\n",
     "        Default is None.\n",
     "\n",
     "    ratio : float, optional\n",
@@ -614,7 +614,7 @@
     "\n",
     "    subplots : Tuple[float, float], optional\n",
     "        Number of subplots that are to be plotted per line and column. They are also\n",
-    "        used to adjust the sizes of the subplots within the figure accordingly.\\n\n",
+    "        used to adjust the sizes of the subplots within the figure accordingly.\n",
     "        Default is (1, 1).\n",
     "\n",
     "    **kwargs : optional\n",
